getting playwrite to test validation fields in register
